--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
                 class="mr-2"
                 style="width: 35px; height: 35px; border-radius: 50%"
               />
-              <span class="postuserfont p-1"><strong><a href="#" target="_blank" style="color: black;">Kubragrss</a></strong></span>
+              <span class="postuserfont p-1"><strong><a href="#" target="_blank" style="color: black;">Kubra</a></strong></span>
               <span class="mt-2 ml-auto"
                 ><strong><i class="fas fa-ellipsis-h"></i></strong
               ></span>
@@ -220,7 +220,7 @@
             <div class="card-body border-0" style="margin-top: -15px">
               <p class="card-text postuserfont">
                 <strong style="margin-left: -4px; margin-right: 5px"
-                  >Kubragrss</strong
+                  >Kubra</strong
                 >Hey Millet! Yeni saç kesimime bakın
               </p>
               <a href="#" style="text-decoration: none"
@@ -375,7 +375,7 @@
               </p>
               <p class="card-text postuserfont" style="margin-top: -15px">
                 <strong style="margin-left: -4px; margin-right: 5px"
-                  >Kubragrss</strong
+                  >Kubra</strong
                 >MÜBAREK OLSUN!!!
               </p>
               <p
@@ -479,7 +479,7 @@
                 style="width: 23px; height: 23px; border-radius: 50%"
               />
               <span class="postuserfont"
-                ><strong>Kubragrss</strong> ve
+                ><strong>Kubra</strong> ve
                 <strong>900.182 diğer kişi</strong> beğendi</span
               >
             </span>
@@ -503,7 +503,7 @@
               >
               <p class="card-text postuserfont">
                 <strong style="margin-left: -4px; margin-right: 5px"
-                  >Kubragrss</strong
+                  >Kubra</strong
                 >ÇOK HAVALISIN
               </p>
               <p class="card-text postuserfont" style="margin-top: -15px">
@@ -602,7 +602,7 @@
                     </span>
                     <a href="#" target="_blank">
                     <span class="postuserfont ml-2 mt-1"
-                      ><strong>Kubragrss</strong></span
+                      ><strong>Kubra</strong></span
                     >
                     <span
                       class="postuserfont float-right"
