--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       crossorigin="anonymous"
     />
    <link rel="stylesheet" href="css/style.css">
-    <title>Instagram</title>
+    <title>Kedistagram</title>
   </head>
   <body class="p-5" style="background-color:#fafafa" >
     <nav class="navbar navbar-expand-sm navbar-light border fixed-top na-custom bg-white">
